<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim8"
    tools:context="com.example.android.newsappstage2_rebuild.MainActivity"
    android:id="@+id/list_item"
    app:cardElevation="@dimen/dim8"
    >

    <TextView
        android:layout_width="@dimen/dim16"
        android:layout_height="match_parent"
        android:id="@+id/categoryColor"
        android:background="@color/other"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dim190"
            android:layout_height="@dimen/dim90"
            android:padding="@dimen/dim8"
            android:contentDescription="@string/picture"
            android:src="@drawable/question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsTitle" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim8"
            android:contentDescription="@string/news_title"
            android:paddingTop="@dimen/dim8"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text20"
            android:layout_marginStart="@dimen/dim16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/news_title" />

        <TextView
            android:id="@+id/newsCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newsTitle"
            android:layout_alignParentStart="true"
            android:padding="@dimen/dim8"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsTitle"
            tools:text="@string/news_category" />


        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newsCategory"
            android:layout_alignParentStart="true"
            android:padding="@dimen/dim8"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsCategory"
            tools:text="@string/author" />

        <TextView
            android:id="@+id/newsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newsCategory"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/dim8"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsAuthor"
            tools:text="@string/date" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>